--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/todospringbootdemo
-spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://sql6.freesqldatabase.com:3306/sql6471656
+spring.datasource.username=sql6471656
+spring.datasource.password=XEJdCr5jWD
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto = update
